kubernetes/mongodb.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: mongodb-ratings
  labels:
    app: mongodb-ratings
    version: v1
spec:
  ports:
  - port: 27018
    name: mongo
  selector:
    app: mongodb-ratings
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb-ratings-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb-ratings
        version: v1
    spec:
      containers:
      - name: mongodb
        image: gcr.io/apigee-istio-k8s-sw/mongodb:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27018
---
