kubernetes/ratings-v4.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ratings-v4
  labels:
    app: ratings-v4
    version: v4
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
    version: v4
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ratings-v4
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ratings
        version: v4
    spec:
      containers:
      - name: ratings
        image: gcr.io/apigee-istio-k8s-sw/ratings:v4
        volumeMounts:
        - name: firebase-vol
          mountPath: "/tmp"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
      volumes:
      - name: firebase-vol
        secret:
          secretName: firebase
          items:
          - key: firebase.json
            path: firebase/firebase.json
            mode: 511
---
