kubernetes/rating-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ratings-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - "*"
  gateways:
  - ratings-gateway
  http:
  - match:
    - uri:
        prefix: /ratings
    - uri:
        regex: '\/ratings.*'
    - uri:
        prefix: /health
    route:
    - destination:
        host: ratings-v4
        port:
          number: 9080
