kubernetes/ratings-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ratings-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - "*"
  gateways:
  - ratings-gateway
  http:
  - match:
    - uri:
        prefix: /firestore-ratings
    rewrite:
      uri: /ratings
    route:
    - destination:
        host: ratings-firestore.default.svc.cluster.local
        port:
          number: 9080
  - match:
    - uri:
        prefix: /nodb-ratings
    rewrite:
      uri: /ratings
    route:
    - destination:
        host: ratings-nodb.default.svc.cluster.local
        port:
          number: 9080
